bug fixes for previous AK event template update

--- a/event_attend.html
+++ b/event_attend.html
@@ -69,7 +69,7 @@
 </div>
 {% endif %}
 
-<div id="event-attend-header" class="section width-normal bg-transparent padding-large">
+<div id="event-attend-header" class="section width-normal padding-large">
 	<div class="section-inner">
 		<h1 id="page-title" class="title3 text-center">{{ event.title }}</h1>
 {% with 1 as hide_map %}
