--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,5 @@
-{% extends "./wrapper.html" %}{% load actionkit_tags %}
-
+{% extends "./wrapper.html" %}
+{% load actionkit_tags %}
 
 {% block content %}
 
@@ -7,63 +7,66 @@
 	<div class="section-inner">
 		<div id="action-header" class="{% if page.custom_fields.page_layout_style == 'expanded' %}c10{% else %}c6{% endif %} ct10 cm10 c-wide">
 			<a id="jump-to-form" href="#action-form" class="tablet-hide desktop-hide mobile-hide bg-orange text-underline-none text-center arrow-down text-large2">{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"signup_submit_button" %}Sign Up{% endfilter %}{% endif %}</a>
-			{% if page.custom_fields.page_pretitle %}
+{% if page.custom_fields.page_pretitle %}
 			<p id="action-pretitle" class="text-font-secondary"><span class="highlight bg-dkgray-trans">{{ page.custom_fields.page_pretitle }}</span></p>
-			{% endif %}
+{% endif %}
 			<h2 id="action-title" class="title3">
-			{% if page.custom_fields.page_title_custom_html %}
-				{% autoescape off %} {{ page.custom_fields.page_title_custom_html }} {% endautoescape %}
-			{% else %}
+{% if page.custom_fields.page_title_custom_html %}
+	{% autoescape off %}
+				{{ page.custom_fields.page_title_custom_html }}
+	{% endautoescape %}
+{% else %}
 				<span class="{{ page.custom_fields.page_title_style }}">{{ page.title }}</span>
-			{% endif %}
+{% endif %}
 			</h2>
-			{% if page.custom_fields.page_author %}
+{% if page.custom_fields.page_author %}
 			<div class="action-author" class="p">
-				{% if page.custom_fields.page_author_image %}<span class="action-author-image"><img src="{{ page.custom_fields.page_author_image }}"></span> {% else %}&mdash; {% endif %}<span class="action-author-text meta">{% autoescape off %}{{ page.custom_fields.page_author }}{% endautoescape %}</span>
+	{% if page.custom_fields.page_author_image %}<span class="action-author-image"><img src="{{ page.custom_fields.page_author_image }}"></span> {% else %}&mdash; {% endif %}<span class="action-author-text meta">{% autoescape off %}{{ page.custom_fields.page_author }}{% endautoescape %}</span>
 			</div>
-			{% endif %}
-		{% if page.custom_fields.page_layout_style == "expanded" %}
+{% endif %}
+{% if page.custom_fields.page_layout_style == "expanded" %}
 		</div>
-		{% endif %}
+{% endif %}
 
 
 		<div id="action-description" class="text-large margin-top-none margin-bottom-huge {% if page.custom_fields.page_layout_style == 'expanded' %}c6 ct10 cm10 c-wide{% endif %}" {% if page.custom_fields.page_layout_style == "expanded" %}{% else %}data-read-more-after="{% if page.custom_fields.page_description_readmore %}{{ page.custom_fields.page_description_readmore }}{% else %}2{% endif %}"{% endif %}>
-		{% autoescape off %}
+{% autoescape off %}
 			{% include_tmpl form.introduction_text %}
-		{% endautoescape %}
+{% endautoescape %}
 		</div>
-		{% if page.custom_fields.page_layout_style == "expanded" %}{% else %}
+{% if page.custom_fields.page_layout_style == "expanded" %}
+{% else %}
 	</div>
-	{% endif %}
-	{% if page.custom_fields.page_is_inactive %}
+{% endif %}
+{% if page.custom_fields.page_is_inactive %}
 		<div id="page-inactive" class="c4 ct7_5 cm10 c-wide">
-		{% autoescape off %}
+	{% autoescape off %}
 			{{ page.custom_fields.page_is_inactive }}
-		{% endautoescape %}
+	{% endautoescape %}
 		</div>
-	{% else %}
+{% else %}
 		<form id="action-form" class="c4 ct7_5 cm10 c-wide form-changeorg form-style-labelabove ak-form action_form" name="act" method="POST" action="/act/" accept-charset="utf-8">
-			{% autoescape off %}
+	{% autoescape off %}
 			<div id="form-intro" class="p text-large text-lineheight-small strong">
-			{% if page.custom_fields.form_text_above_form %}
+		{% if page.custom_fields.form_text_above_form %}
 				{{ page.custom_fields.form_text_above_form }}
-			{% else %}
+		{% else %}
 				{% filter ak_text:"signup_form_intro" %}{% endfilter %}
-			{% endif %}
+		{% endif %}
 			</div>
 			{% include "./progress_meter.html" %}
 			<input type="hidden" name="utf8" value="&#x2714;">
 			<input type="hidden" name="page" value="{{ page.name }}" />
 			{% include "./user_form_wrapper.html" %}
-			{% endautoescape %}
+	{% endautoescape %}
 			<ul style="display:none;" id="ak-errors"><li></li></ul>
-			{% if page.custom_fields.form_additional_fields %}
+	{% if page.custom_fields.form_additional_fields %}
 				<div class="form-additional-html">
 					{{ page.custom_fields.form_additional_fields }}
 				</div>
-			{% endif %}
+	{% endif %}
 			<div class="input-wrapper input-submit">
-				<input type="submit" class="submit" value="{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"signup_submit_button" %}Sign Up{% endfilter %}{% endif %}" />
+				<button type="submit" class="submit button button-big button-primary">{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"signup_submit_button" %}Sign Up{% endfilter %}{% endif %}</button>
 			</div>
 
 			<div id="action-toc" class="text-small icon-before icon-faded" data-icon="&#xE93E;">
@@ -82,7 +85,7 @@
 		<div id="recent-actions" class="c6 ct6 cm10 c-wide text-small">
 			{% include "./recentactions.html" %}
 		</div>
-	{% endif %}
+{% endif %}
 	</div>
 </section>
 {% endblock %}
