Making event search box with flex
depending on settings, the country select field may or may not be there, so use flex to grow the city/zip search field to fill the space

--- a/event_search.html
+++ b/event_search.html
@@ -57,6 +57,7 @@ a.area-link.event-link:hover {
   #page-header{
     margin-bottom:-4em;}
   #event-search-form{
+    display:flex !important
     font-size:0;}
   #event-search-postal-wrapper,
   #event-search-country-wrapper,
@@ -64,6 +65,7 @@ a.area-link.event-link:hover {
     display:inline-block;
     vertical-align:text-top;}
   #event-search-postal-wrapper{
+    flex-grow:1;
     width:50%;}
   #event-search-country-wrapper{
     margin-left:1%;
