--- a/event_search.html
+++ b/event_search.html
@@ -57,7 +57,7 @@ a.area-link.event-link:hover {
   #page-header{
     margin-bottom:-4em;}
   #event-search-form{
-    display:flex !important
+    display:flex !important;
     font-size:0;}
   #event-search-postal-wrapper,
   #event-search-country-wrapper,
