--- a/event_attendee_tools.html
+++ b/event_attendee_tools.html
@@ -61,6 +61,7 @@
 
 <div id="event-attend-header" class="section width-normal padding-large">
 	<div class="section-inner">
+		<h4 class="event-campaign-title margin-bottom-medium text-center text-large meta">{{ campaign.local_title }}<h4>
 		<h1 id="page-title" class="title3 text-center">{{ event.title }}</h1>
 	{% with 1 as hide_map %}
 		{% for event in events %}
