--- a/event_attend.html
+++ b/event_attend.html
@@ -43,7 +43,7 @@
 <div id="event-attend" class="bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 
 {% if update or args.foo or event.is_inactive or event.is_full or event.is_in_past or event.is_awaiting_confirmation %}
-<div class="notifications section width-medium text-center">
+<div id="notification-bar" class="notifications section width-medium text-center">
 	<div class="section-inner">
 	{% if update %}
 		<div class="notification success notification-success">
@@ -75,6 +75,7 @@
 
 <div id="event-attend-header" class="section width-normal padding-large">
 	<div class="section-inner">
+		<h4 class="event-campaign-title margin-bottom-medium text-center text-large meta">{{ campaign.local_title }}<h4>
 		<h1 id="page-title" class="title3 text-center">{{ event.title }}</h1>
 {% with 1 as hide_map %}
 	{% for event in events %}
