--- a/event_create.html
+++ b/event_create.html
@@ -4,6 +4,11 @@
 
 <style>
 
+.text-style-parenthesis::before{
+  content:'(';}
+.text-style-parenthesis::after{
+  content:')';}
+
 .ak-err{
   color:#dd8902;}
 .section-header{
@@ -227,16 +232,16 @@
     <div class="section-inner">
       <h3 class="section-header meta margin-bottom-large">{% filter ak_text:"event_create_section_contact" %}Your contact information{% endfilter %}</h3>
       <div id="known_user" class="text-center">
-        <div class="padding-small bg-white-trans text-large3 margin-bottom-small">
-          <p><span class="ak-user-name text-strong icon-before icon-faded" data-icon="&#xE904;">{{ user.name }}</span><br>
+        <div class="padding-small bg-white-trans margin-bottom-normal">
+          <p class="text-large3 margin-bottom-small"><span class="ak-user-name text-strong icon-before icon-faded" data-icon="&#xE904;">{{ user.name }}</span><br>
             <span class="ak-user-email icon-before icon-faded" data-icon="&#xE900;">{{ user.email }}</span><br>
             <span class="ak-user-phone icon-before icon-faded" data-icon="&#xE951;">{{ user.phone }}</span>
           </p>
           <p>
-            (<a href="https://act.350.org/me/" target="_blank" class="text-small text-underline-none">{% filter ak_text:"event_create_update_info_button" %}Update your information{% endfilter %}</a>)
+            <a href="https://act.350.org/me/" class="text-style-parenthesis opacity-50" target="_blank" class="text-small text-underline-none">{% filter ak_text:"event_create_update_info_button" %}Update your information{% endfilter %}</a>
           </p>
         </div>
-      	<div id="logout_link" class="text-small">
+      	<div id="logout_link" class="text-small opacity-50">
       		<p><a href="?" onclick="return actionkit.forms.logOut()" class="text-underline-none arrow-right">Not <span id="known_user_name"></span>? Click here to log out </a></p>
       	</div>
       </div>
